...
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/profile_name"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextProfileName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>
...
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/server_url"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextServerUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textUri" />

            </com.google.android.material.textfield.TextInputLayout>
...
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/server_port"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextServerPort"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:imeOptions="actionNext" />

            </com.google.android.material.textfield.TextInputLayout>
...
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/username"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>
...
                android:layout_marginBottom="24dp"
                android:hint="@string/password"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone" />

            </com.google.android.material.textfield.TextInputLayout>
...
